--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
  <div class="container"> 
 
-      <h2>European destinations</h2>
+      <h2>European destinations</h2> School Abroad invites you to discover the European countries in which universities welcome you for a unique exchange.
 
     <div class="cards" style="
        display: flex;
